Change default config file params for NPSRT testing

--- a/linkCheck.cfg
+++ b/linkCheck.cfg
@@ -16,17 +16,17 @@ doModemCheck = yes
 logFile = modemtestreport.csv
 
 # FTP Server Details
-ftpHost = 66.82.145.233
-ftpUser = l3script
-ftpPass = l3upload
+ftpHost = 66.82.228.131
+ftpUser = npsrt
+ftpPass = npsrt
 
 # FTP File Detail
 # To generate files:
 # dd if=/dev/zero of=<FILENAME> bs=1024 count=0 seek=$[1024*<SIZE>]
 # Where FILENAME woule be 10mb, 100mb, etc.
 # and SIZE would be 10, 100, etc.
-downFile = 10mb
-upFile = 10mb
+downFile = 1mb.test
+upFile = 1mb.test
 
 # Modem Type
 # Cradlepoint
