(1) Add passive mode option to FTP; (2) fix results file header issue

--- a/linkCheck.cfg
+++ b/linkCheck.cfg
@@ -40,7 +40,7 @@ modemType = 1
 pingCount = 100
 
 # Header Information for Log File
-header = Time,Message,Ping Min,Ping Max,Ping Average,Upload Speed(KBps),Download Speed(KBps)
+header = Time,Ping Min,Ping Max,Ping Average,Upload Speed(KBps),Download Speed(KBps)
 
 # Cradlepoint Default Information
 cpHeader = ,Modem ID,Group,MDN,Carrier,IMEI,RSSI,RSRP,RSRQ,SINR,Firmware
